cors fix and authentication response fix